--- a/STsNode/.gitignore
+++ b/STsNode/.gitignore
@@ -10,15 +10,14 @@
 
 # production
 /build
-
+/dist
 # misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
+.env
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/STsNode
