--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/react-helmet": "^5.0.15",
+    "@types/react-modal": "^3.10.4",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-modal": "^3.11.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "styled-components": "^5.0.1",
