--- a/STsNode/package.json
+++ b/STsNode/package.json
@@ -5,11 +5,12 @@
   "main": "./src/app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env pm2 start ./pm2.json",
-    "stop": "pm2 delete ./pm2.json",
+    "start": "pm2 start src/app.ts",
+    "stop": "pm2 delete app",
+    "db": "sudo pm2 start mongod --dbpath ./db",
     "dev": "cross-env nodemon ./src/app.ts",
     "build": "webpack --config webpack.config.js",
-    "buildtsc": "nodemon tsc"
+    "buildtsc": "nodemon 0"
   },
   "keywords": [],
   "author": "",
@@ -30,11 +31,16 @@
     "fs": "0.0.1-security",
     "helmet": "^3.21.2",
     "http": "^0.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "lowdb": "^1.0.0",
+    "mongodb": "^3.5.2",
     "mongoose": "^5.8.2",
     "morgan": "^1.9.1",
-    "pm2": "^4.2.1",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.4.2",
+    "path": "^0.12.7",
+    "pm2": "^4.2.3",
     "shortid": "^2.2.15",
-    "socket.io": "^2.3.0",
     "ts-lint": "^4.5.1",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.5.4",
@@ -45,6 +51,6 @@
     "@types/express": "^4.17.2",
     "@types/node": "^12.12.14",
     "nodemon": "^2.0.1",
-    "typescript": "^3.7.3"
+    "typescript": "^3.7.5"
   }
 }
