--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "my-app",
+  "name": "soccerSite",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
@@ -14,6 +16,8 @@
     "@types/react-modal": "^3.10.4",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.2",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.1.8",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
