--- a/STsNode/package.json
+++ b/STsNode/package.json
@@ -5,9 +5,9 @@
   "main": "./src/app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "pm2 start src/app.ts",
-    "stop": "pm2 delete app",
-    "db": "sudo pm2 start mongod --dbpath ./db",
+    "start": "npm run build && pm2 start ./pm2.json",
+    "stop": "pm2 delete ./pm2.json",
+    "db": "pm2 start mongod --dbpath ./db",
     "dev": "cross-env nodemon ./src/app.ts",
     "build": "webpack --config webpack.config.js",
     "buildtsc": "nodemon 0"
