--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-helmet": "^5.2.1",
     "react-modal": "^3.11.1",
     "react-router-dom": "^5.1.2",
+    "react-toastify": "^5.5.0",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
