--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-dev-utils": "^10.1.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-id-swiper": "^2.4.0",
     "react-modal": "^3.11.1",
     "react-router-dom": "^5.1.2",
     "react-toastify": "^5.5.0",
@@ -72,6 +73,7 @@
     "semver": "6.3.0",
     "style-loader": "1.1.3",
     "styled-components": "^5.0.1",
+    "swiper": "^5.3.1",
     "terser-webpack-plugin": "2.3.4",
     "ts-pnp": "1.1.5",
     "typescript": "^3.7.5",
