--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-helmet": "^5.0.15",
     "@types/react-modal": "^3.10.4",
     "@types/react-router-dom": "^5.1.3",
+    "@types/socket.io-client": "^1.4.32",
     "@types/styled-components": "^4.4.2",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
@@ -72,6 +73,7 @@
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
+    "socket.io-client": "^2.3.0",
     "style-loader": "1.1.3",
     "styled-components": "^5.0.1",
     "swiper": "^5.3.1",
